--- a/estilo.css
+++ b/estilo.css
@@ -34,6 +34,7 @@ div {
 
     text-align: center;    
     display: block;
+    word-spacing: 10px;
 
 }
 
@@ -48,4 +49,8 @@ button {
     font-size: 1em;
     border: none;
     margin: 40px 10px 0 10px;
+}
+
+input{
+	margin-left: 5px;
 }
